[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Greeting Screens/Firework.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Greeting Screens/Firework/Firework_blue.gd" type="Script" id=2]

[node name="Firework_blue" type="Node2D"]
script = ExtResource( 2 )

[node name="Particles2D" parent="." instance=ExtResource( 1 )]
modulate = Color( 0.0745098, 0.0235294, 0.964706, 1 )
position = Vector2( 486, 353 )

[node name="Particles2D2" parent="." instance=ExtResource( 1 )]
modulate = Color( 0.0235294, 0.458824, 0.964706, 1 )
position = Vector2( 486, 353 )

[node name="Particles2D3" parent="." instance=ExtResource( 1 )]
modulate = Color( 0.0235294, 0.721569, 0.964706, 1 )
position = Vector2( 486, 353 )
